--- a/HTML/index.html
+++ b/HTML/index.html
@@ -27,5 +27,31 @@
         </div>
 
 
+        <h1>4 Enlaces y Listas</h1>
+        <div>Visita nuestro 
+            <a href="https://yahoo.com.ar" target="_blank">sitio web </a>
+             para mas información
+        </div>
+        <div>
+            <h5>Enlaces internos:</h5>
+            <br><a hreflang="estructura">Ir a Estructura</a></br>
+            <br><a hreflang="Contenido">Ir a Multimedia</a></br>
+            <br><a hreflang="nuestro">Ir a Formulario</a></br>
+        </div>
+        <div>
+            <h5>Lista desordenada:</h5>
+            <ul>
+                <li>1er item de la lista desordenada</li>
+                <li>2do item de la lista desordenada</li>
+            </ul>
+        </div>
+        <div>
+            <h5>Lista ordenada:</h5>
+            <ol>
+                <li>1er elemento de la lista ordenada</li>
+                <li>2do elemento de la lista ordenada</li>
+            </ol>
+        </div>
+
 </body>
 </html>
